css/style.css
.container {
    padding-top: 3em;
}

html,body {
    height: 100%;
}

.container{
    height:100%;
}

.my-name {
    font-family: 'Parisienne', cursive;
    font-size: 2em;
} 

p, label {
    font-family: 'Quicksand', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Jost', sans-serif;
    font-weight: 600;
}

.carousel-inner  {
    max-height: 30em;
}

/* NAVIGATION BAR */
nav {
    background-color: #36D0FF !important;
    font-family: 'Jost', sans-serif;
    border: none;
}

nav li {
    padding-left: 3em;
    padding-right: 3em;
}

nav ul li a {
    color:white;
    font-size: 1.3em;
}

nav ul li a:hover {
    color:white;
}

.nav-item {
    font-weight: 200;
}

.active {
    font-weight: 500;
}

.navbar-nav {
    margin-left: auto;
}


/* SPLASH PAGE */

#floating-mountain-graphic img {
    display: block;
    max-height: 600px;
    position: absolute;
}

@keyframes floating {
    0%, 100% {
        -webkit-transform: translateY(0px);
    }
    50% {
        -webkit-transform: translateY(14px);
    }
  }

.motto-drop h4{
    padding-top:1em;
    color:white;
    font-size: 2em !important;
}

.fa-chevron-down {
    padding: 1em;
    width:10px;
    position: absolute;
    bottom:0;
    left:50%;
    margin-left: -5px;
    color:white;
}

#splash-bg {
    background-color: #36D0FF;
    height:100%;
}


/* About Section */

.about-paragraph {
    margin-top: 3em;
}

.about-me .card-img {
    padding-top: 2em;
    padding-left: 2em;
    padding-bottom: 2em;
    padding-right:2em;
}

.social-media-icon {
    margin-top: 0.5em;
    display: inline-block;
    margin-right: 0.8em;
}

.fab {
    color:black;
}

.download-resume {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width:75%;
}

/* Portfolio */

.portfolio-header {
    margin-bottom: 1em;
}

a.card-link, a.card-link:hover {
    color:white;
}

.card-text {
    font-weight: bold;
    font-family: 'Quicksand', sans-serif;
}

/* Contact */

.contact-form h1 {
    margin-bottom: 1em;
}

.contact-form {
    display: block;
    margin-right: auto;
    margin-left: auto;
}

/* PROJECT PAGE */

.project-description {
    margin-top: 0.6em;
}

.tab-pane {
    padding: 1em;
    font-weight: normal;
    font-family: 'Quicksand', sans-serif;
}

.project-link {
    display: block;
    margin-bottom: 2em;
}

